# Storm-Call-Shout-Overhaul

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY.md  vcpkg.json
docs/: architecture.md  building.md  esp-records.md
package/SKSE/Plugins/: SCSOProjectileBounds.ini
src/papyrus/: ultrastormcallunified.psc
src/skse/: main.cpp
tools/: patch_esp_vmad.py
